Renaming defaultFilePath variable.

--- a/webapp/views/configuration/provider.html
+++ b/webapp/views/configuration/provider.html
@@ -30,7 +30,7 @@
     saveConfig: {[ saveConfig|json|safe ]},
     fields: {[ fields|json|safe || {} ]},
     redirectTo: {[ (redirectTo || {})|json|safe ]},
-    defaultFilePath: {[ defaultFilePath|json|safe ]},
+    defaultFilePathList: {[ defaultFilePathList|json|safe ]},
     hasProjectPermission: {[ hasProjectPermission|json|safe ]}
   };
 </script>
