Listing the paths that was added in defaultFilePathList.

--- a/webapp/views/configuration/provider.html
+++ b/webapp/views/configuration/provider.html
@@ -122,6 +122,10 @@
       <option ng-repeat="db in dbList" value="{{db}}">
   </datalist>
 
+  <datalist id='filePathList'>
+      <option ng-repeat="path in filePathList" value="{{path}}">
+  </datalist>
+
 </div> <!-- end col md 12 -->
 
 {% endblock %}
