--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -164,9 +164,9 @@
           <div class="form-group" terrama2-show-errors>
             <label><span ng-bind="i18n.__('View Data Series')"></span>:</label>
             <div class="pull-right">
-              <span><input type="checkbox" ng-model="ctrl.filter['isAnalysis']"> {{ i18n.__('Analysis') }} &nbsp</span> 
-              <span><input type="checkbox" ng-model="ctrl.filter['DYNAMIC']"> {{ i18n.__('Dynamic') }} &nbsp</span> 
-              <span><input type="checkbox" ng-model="ctrl.filter['STATIC']"> {{ i18n.__('Static') }}</span> 
+              <span><input type="checkbox" ng-model="ctrl.filter['isAnalysis']"> {{ i18n.__('Analysis') }} &nbsp</span>
+              <span><input type="checkbox" ng-model="ctrl.filter['DYNAMIC']"> {{ i18n.__('Dynamic') }} &nbsp</span>
+              <span><input type="checkbox" ng-model="ctrl.filter['STATIC']"> {{ i18n.__('Static') }}</span>
             </div>
             <ui-select
                     name="dataSeries"
@@ -198,7 +198,7 @@
       </div>
     </terrama2-box>
 
-    <terrama2-box title="i18n.__('Style')" css="ctrl.css">
+    <terrama2-box title="i18n.__('Style')" css="ctrl.css" ng-if="!ctrl.isVectorialProcessing()">
       <form name="forms.styleForm" novalidate>
         <!-- Vectorial -->
         <terrama2-style-legend form-ctrl="forms.styleForm" type="ctrl.targetDataSeriesType" is-dynamic="ctrl.isDynamic" is-updating="ctrl.isUpdating" columns-list="ctrl.columnsList" postgis-data="ctrl.postgisData" model="ctrl.legend"></terrama2-style-legend>
@@ -219,7 +219,7 @@
       <a href="{[ BASE_URL ]}configuration/views/" class="btn btn-primary pull-left"><span ng-bind="i18n.__('Cancel')"></span></a>
     </div>
   </terrama2-box>
-  
+
 </div> <!-- end col md 12 -->
 
 {% endblock %}
